namespace java com.rubin.enums
namespace py com.rubin.enums

enum RequestType {
    SAY_HELLO,//say hello
    QUERY_TIME //query time
}